prusti-tests/tests/verify_overflow/ui/core_proof/Counterexamples/struct-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/struct-2.rs:13:23
   |
13 | fn test_pure(x: X) -> bool{
   |                       ^^^^
   |
note: the error originates here
  --> $DIR/struct-2.rs:13:1
   |
13 | / fn test_pure(x: X) -> bool{
14 | |     x.a == x.b
15 | | }
   | |_^
note: counterexample for "x"
       value:   X {
            a: 0,
            b: -2147483610,
        }
  --> $DIR/struct-2.rs:13:14
   |
13 | fn test_pure(x: X) -> bool{
   |              ^
note: counterexample for "result"
       value:   false
  --> $DIR/struct-2.rs:14:5
   |
14 |     x.a == x.b
   |     ^^^^^^^^^^

error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/struct-2.rs:19:35
   |
19 | fn test_mut(x: &mut X, a: i32) -> bool{
   |                                   ^^^^
   |
note: the error originates here
  --> $DIR/struct-2.rs:19:1
   |
19 | / fn test_mut(x: &mut X, a: i32) -> bool{
20 | |     x.a = a;
21 | |     x.b = 1;
22 | |     x.a = 2;
23 | |     x.a = a;
24 | |     x.a > 0
25 | | }
   | |_^
note: counterexample for "x"
       value:   ref(X {
            a: 2147481210,
            b: -2147462410,
        })
  --> $DIR/struct-2.rs:19:13
   |
19 | fn test_mut(x: &mut X, a: i32) -> bool{
   |             ^
note: counterexample for "x"
       value:   ref(X {
            a: -2147451363,
            b: -2147462410,
        })
  --> $DIR/struct-2.rs:20:5
   |
20 |     x.a = a;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: -2147451363,
            b: 1,
        })
  --> $DIR/struct-2.rs:21:5
   |
21 |     x.b = 1;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: 2,
            b: 1,
        })
  --> $DIR/struct-2.rs:22:5
   |
22 |     x.a = 2;
   |     ^^^^^^^
note: counterexample for "x"
       value:   ref(X {
            a: -2147451363,
            b: 1,
        })
  --> $DIR/struct-2.rs:23:5
   |
23 |     x.a = a;
   |     ^^^^^^^
note: counterexample for "a"
       value:   -2147451363
  --> $DIR/struct-2.rs:19:24
   |
19 | fn test_mut(x: &mut X, a: i32) -> bool{
   |                        ^
note: counterexample for "result"
       value:   false
  --> $DIR/struct-2.rs:24:5
   |
24 |     x.a > 0
   |     ^^^^^^^

error: aborting due to 2 previous errors

